# penumbra

./: .gdbinit  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  mkimage.sh  qemu.sh
buildroot/boot/: limine.conf
cmake/: GenerateConfig.cmake
data/shaders/: bloom_filter.slang  bloom_filterHDR.slang  brdflut.slang  cluster_cull.slang  generate_commands.slang  generate_commands_vb.slang  globals.slang  hdr_compose.slang  ibl_common.slang  imgui.slang  instance_cull.slang  normal_encoding.slang  pbr_material.slang  prefix_scan_add_partial.slang  prefix_scan_index.slang  render_world.slang  shadowmap_alphamask.slang  shadowmap_opaque.slang  transparent_PBR.slang  visbuffer_barycentric.slang  visbuffer_build_alphamask.slang  visbuffer_build_opaque.slang  visbuffer_picking.slang  visbuffer_resolve.slang  visbuffer_shaderdata.slang  visbuffer_visualize.slang
editor/: CMakeLists.txt  core.cppm  main.cpp
editor/widgets/: inspector.cppm  scenegraph.cppm  viewport.cppm  widget.cppm
editor/world/: envmap.cppm  prefab.cppm  state.cppm
editor/world/components/: camera.cppm  lights.cppm  render_object.cppm
modules/: CMakeLists.txt
modules/core/: CMakeLists.txt  array_proxy.cppm  config.cppm  config.cppm.in  hash.cppm  input_keys.cppm  log.cppm  mod.cppm  panic.cppm  strongly_typed.cppm  vfs.cppm  window.cppm
modules/ecs/: CMakeLists.txt  mod.cppm
modules/gpu/: CMakeLists.txt  api.cppm  impl_vulkan.cpp  mod.cppm  shader.cppm  utility.cppm
modules/math/: CMakeLists.txt  matrix.cppm  mod.cppm  plane.cppm  quaternion.cppm  transform.cppm  utility.cppm  vector.cppm
modules/renderer/: CMakeLists.txt  api.cppm  core.cppm  envmap.cppm  geometry_buffer.cppm  impl.cpp  material.cppm  mod.cppm  render_world.cppm
modules/resource/: CMakeLists.txt  api.cppm  geometry.cppm  impl.cpp  material.cppm  mod.cppm  resource_id.cppm  resource_manager.cppm  texture.cppm
modules/ui/: CMakeLists.txt  device_overlay.cppm  imgui.cppm  mod.cppm
src/: CMakeLists.txt  init.cpp  kfmt.cppm  klog.cppm  kstd.cppm  kstd_impl.cpp  linker.ld  types.cppm
src/arch/x86_64/: cpu.cppm  gdt.S  interrupts.cppm  io.cppm  isr_stubs.S  mod.cppm  module.cppm  paging.cppm  serial.cppm
src/mm/: memory_map.cppm  module.cppm
tools/: CMakeLists.txt
tools/shader_compiler/: CMakeLists.txt  main.cpp
